--- a/tv.html
+++ b/tv.html
@@ -159,7 +159,7 @@
             script = document.createElement('script');
             script.setAttribute('type', 'text/javascript');
             script.setAttribute('src', Data['ScriptsFooter'][i]);
-            alert(Data['ScriptsFooter'][i]);
+            console.log(Data['ScriptsFooter'][i]);
             footer.appendChild(script);
 
             // i++;
