--- a/tv.html
+++ b/tv.html
@@ -30,9 +30,9 @@
 
     <!-- Script Files -->
     <script type='text/javascript' src='$B2BAPIS/b2bapis/b2bapis.js'></script>
-    <script type="text/javascript" src="$B2BAPIS/b2bapis/b2bavplay.js"></script>
     <script type='text/javascript' src='$MANAGER_WIDGET/Common/af/2.0.0/loader.js'></script>
     <script type="text/javascript" src="$WEBAPIS/webapis/webapis.js"></script>
+    <script type='text/javascript' src='$B2BAPIS/b2bapis/b2bavplay.js'></script>
     <script type='text/javascript' src='./Views/Vendors/Samsung/Server.js'></script> <!-- ACTUALIZAR IP SERVIDOR! -->
 
     <script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
