--- a/tv.html
+++ b/tv.html
@@ -43,7 +43,8 @@
 <footer></footer>
 <script>
     /* Carga inicial */
-    var b2bcontrol = '';
+    var b2bcontrol = '',
+        Player = '';
 
     var MACAddress  = '';
 
@@ -64,6 +65,11 @@
     var init = function() {
         if (window.tizen !== undefined) {
             b2bcontrol = window.b2bapis.b2bcontrol;
+
+            Player = webapis.avplay;
+            Player.setListener(listener);
+
+            Debug('INIT PLAYER WEBAPIS.AVPLAY > LISTENER');
 
             try {
                 MACAddress = b2bcontrol.getMACAddress();
