--- a/tv.html
+++ b/tv.html
@@ -69,7 +69,7 @@
             Player = webapis.avplay;
             Player.setListener(listener);
 
-            Debug('INIT PLAYER WEBAPIS.AVPLAY > LISTENER');
+            Debug('INIT FUNCION: PLAYER WEBAPIS.AVPLAY > LISTENER');
 
             try {
                 MACAddress = b2bcontrol.getMACAddress();
