--- a/tv.html
+++ b/tv.html
@@ -67,9 +67,8 @@
             b2bcontrol = window.b2bapis.b2bcontrol;
 
             Player = webapis.avplay;
-            Player.setListener(listener);
 
-            Debug('INIT FUNCION: PLAYER WEBAPIS.AVPLAY > LISTENER');
+            Debug('INIT FUNCION: PLAYER WEBAPIS.AVPLAY');
 
             try {
                 MACAddress = b2bcontrol.getMACAddress();
