--- a/tv.html
+++ b/tv.html
@@ -35,6 +35,15 @@
     <script type='text/javascript' src='$B2BAPIS/b2bapis/b2bavplay.js'></script>
     <script type='text/javascript' src='./Views/Vendors/Samsung/Server.js'></script> <!-- ACTUALIZAR IP SERVIDOR! -->
 
+    // pluginPower
+    <object id="pluginPower" border="0" classid="clsid:SAMSUNG-INFOLINK-SEF" style="opacity: 0.0; background-color: #000; width: 0px; height: 0px;"></object>
+
+    // pluginObjectTVMW
+    <object id="pluginObjectTVMW" border="0" classid="clsid:SAMSUNG-INFOLINK-TVMW" style="opacity:0.0; background-color: #000; width: 0px; height: 0px;"></object>
+
+    // pluginObjectSEF
+    <object id="pluginObjectSEF" classid="clsid:SAMSUNG-INFOLINK-SEF"  style="opacity: 0.0; background-color: #000; width: 0px; height: 0px;"></object>
+
     <script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 </head>
 <body onload='init();'>
