--- a/tv.html
+++ b/tv.html
@@ -67,6 +67,9 @@
 
             Player = webapis.avplay;
 
+            var current_dt = tizen.time.getCurrentDateTime();
+            alert("current date/time is " + current_dt.toLocaleString());
+
             try {
                 MACAddress = b2bcontrol.getMACAddress();
             } catch (e) {
