--- a/tv.html
+++ b/tv.html
@@ -176,6 +176,9 @@
         }
 
         registerkeys('tv');
+
+        GetWindowFullSize();
+        GetWindowMinSize();
     }
 
     //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
