--- a/tv.html
+++ b/tv.html
@@ -68,7 +68,7 @@
             Player = webapis.avplay;
 
             var current_dt = tizen.time.getCurrentDateTime();
-            alert("current date/time is " + current_dt.toLocaleString());
+            console.log("current date/time is " + current_dt.toLocaleString());
 
             try {
                 MACAddress = b2bcontrol.getMACAddress();
