--- a/tv.html
+++ b/tv.html
@@ -13,6 +13,7 @@
         <tizen:application id="87yCAs7xPK.bbinco" package="87yCAs7xPK" required_version="2.3"/>
         <content src="index.html"/>
         <feature name="http://www.samsungdforum.com/feature/Keyboard"/>
+        <feature name="http://tizen.org/feature/screen.size.normal.1080.1920"/>
         <icon src="icon.png"/>
         <tizen:metadata key="http://samsung.com/tv/metadata/prelaunch.support" value="true"/>
         <tizen:privilege name="http://developer.samsung.com/privilege/network.public"/>
