--- a/menu.html
+++ b/menu.html
@@ -60,6 +60,7 @@
           link = '',
           i = 0;
 
+  alert('MENUUUUUUU');
   var init = function() {
     if (window.tizen !== undefined) {
       b2bcontrol = window.b2bapis.b2bcontrol;
