--- a/menu.html
+++ b/menu.html
@@ -62,6 +62,8 @@
 
   alert('MENUUUUUUU');
   var init = function() {
+
+    alert('INIT');
     if (window.tizen !== undefined) {
       b2bcontrol = window.b2bapis.b2bcontrol;
 
