--- a/menu.html
+++ b/menu.html
@@ -63,7 +63,7 @@
   alert('MENUUUUUUU');
   var init = function() {
 
-    alert('INIT');
+    alert('init menu');
     if (window.tizen !== undefined) {
       b2bcontrol = window.b2bapis.b2bcontrol;
 
