--- a/tv.html
+++ b/tv.html
@@ -61,6 +61,7 @@
         i = 0;
 
     var init = function() {
+        alert('init tv');
         if (window.tizen !== undefined) {
             b2bcontrol = window.b2bapis.b2bcontrol;
 
