--- a/menu.html
+++ b/menu.html
@@ -178,5 +178,14 @@
   //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
 
   setTimeout(function(){ SetFooterScripts(); }, 900);
+
+
+
+  // Contenido multimedia para Menu
+
+  var MainLogo = document.getElementById('MainLogo');
+
+      MainLogo.src = IndexLogo;
+
 </script>
 </html>
