--- a/menu.html
+++ b/menu.html
@@ -162,7 +162,7 @@
       script = document.createElement('script');
       script.setAttribute('type', 'text/javascript');
       script.setAttribute('src', Data['ScriptsFooter'][i]);
-      console.log(Data['ScriptsFooter'][i]);
+      alert(Data['ScriptsFooter'][i]);
       footer.appendChild(script);
 
       // i++;
