--- a/menu.html
+++ b/menu.html
@@ -118,6 +118,7 @@
 
         TemplateSource = 'http://' + ServerIp + '/BBINCO/TV/'+Data['Variables'][0].Template;
 
+        alert(TemplateSource);
         GetTemplateContent();
       }
     });
