--- a/menu.html
+++ b/menu.html
@@ -176,7 +176,7 @@
       // }
     }
 
-    registerkeys('tv');
+    //TMP registerkeys('tv');
   }
 
   //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
