--- a/menu.html
+++ b/menu.html
@@ -175,7 +175,7 @@
       // }
     }
 
-    //TMP registerkeys('tv');
+    registerkeys('tv');
   }
 
   //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
