--- a/menu.html
+++ b/menu.html
@@ -191,7 +191,7 @@
 
     MainLogo.src = IndexLogo;
 
-    console.log('------------------->>>>>>>> MAINGLOGO: '+MainLogo);
+    console.log('------------------->>>>>>>> MAIN LOGO: '+MainLogo);
   }
 </script>
 </html>
