--- a/content.html
+++ b/content.html
@@ -167,7 +167,7 @@
     setTimeout(function(){ SetLogo(); }, 1000);
 
     function SetLogo(){
-        // Contenido multimedia para Menu
+        // Contenido multimedia para Promos
 
         if(CurrentModule === 'Promos') {
             var MainLogo = document.getElementById('MainLogo');
