--- a/content.html
+++ b/content.html
@@ -174,7 +174,7 @@
 
             MainLogo.src = IndexLogo;
 
-            console.log('------------------->>>>>>>> MAIN LOGO: ' + MainLogo);
+            alert('------------------->>>>>>>> MAIN LOGO: ' + IndexLogo);
         }
     }
 
