--- a/content.html
+++ b/content.html
@@ -168,7 +168,7 @@
 
     function SetLogo(){
         // Contenido multimedia para Promos
-
+alert(CurrentModule);
         if(CurrentModule === 'Promos') {
             var MainLogo = document.getElementById('MainLogo');
 
