--- a/content.html
+++ b/content.html
@@ -100,6 +100,7 @@
                 Data = $.parseJSON(response);
 
                 IndexLogo = Data['Variables'][0].IndexLogo;
+                alert(IndexLogo);
 
                 TemplateSource = 'http://' + ServerIp + '/BBINCO/TV/'+Data['Variables'][0].Template;
 
