--- a/content.html
+++ b/content.html
@@ -89,7 +89,7 @@
 
         $.ajax({
             method: 'POST',
-            url: 'http://' + ServerIp + ServerFolder + 'contentContent.php',
+            url: 'http://' + ServerIp + ServerFolder + '/contentContent.php',
             async: false,
             data: {
                 MacAddress: MACAddress,
