--- a/menu.html
+++ b/menu.html
@@ -119,7 +119,7 @@
 
         IndexLogo = Data['Variables'][0].IndexLogo;
 
-        TemplateSource = 'http://' + ServerIp + ServerFolder + Data['Variables'][0].Template;
+        TemplateSource = 'http://' + ServerIp + ServerFolder +"/" + Data['Variables'][0].Template;
 
         GetTemplateContent();
       }
