--- a/tv.html
+++ b/tv.html
@@ -115,7 +115,7 @@
 
                 IndexLogo = Data['Variables'][0].IndexLogo;
 
-                TemplateSource = 'http://' + ServerIp + ServerFolder+Data['Variables'][0].Template;
+                TemplateSource = 'http://' + ServerIp + ServerFolder+"/" +Data['Variables'][0].Template;
 
                 GetTemplateContent();
             }
