--- a/content.html
+++ b/content.html
@@ -101,7 +101,7 @@
 
                 IndexLogo = Data['Variables'][0].IndexLogo;
 
-                TemplateSource = 'http://' + ServerIp + ServerFolder + Data['Variables'][0].Template;
+                TemplateSource = 'http://' + ServerIp + ServerFolder+'/' + Data['Variables'][0].Template;
 
                 GetTemplateContent();
             }
