--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 	}
 
 	function GetInfoDevice(){
-
+		//alert('http://'+ServerIp + ServerFolder + '/Core/Controllers/Index.php');
 		$.ajax({
 			type: 'POST',
 			url: 'http://'+ServerIp + ServerFolder + '/Core/Controllers/Index.php',
