--- a/tv.html
+++ b/tv.html
@@ -44,6 +44,7 @@
     var b2bcontrol = '',
         Player = '';
 
+    alert('VARS 1');
     var MACAddress  = '';
 
     var InfoDevice = [];
@@ -61,6 +62,7 @@
         i = 0;
 
     var init = function() {
+        alert('INIT F');
         if (window.tizen !== undefined) {
             b2bcontrol = window.b2bapis.b2bcontrol;
 
