--- a/tv.html
+++ b/tv.html
@@ -164,7 +164,7 @@
             script = document.createElement('script');
             script.setAttribute('type', 'text/javascript');
             script.setAttribute('src', Data['ScriptsFooter'][i]);
-            console.log(Data['ScriptsFooter'][i]);
+            alert(Data['ScriptsFooter'][i]);
             footer.appendChild(script);
 
             // i++;
