--- a/tv.html
+++ b/tv.html
@@ -35,7 +35,7 @@
     <script type='text/javascript' src='./Views/Vendors/Samsung/Server.js'></script> <!-- ACTUALIZAR IP SERVIDOR! -->
     <script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 </head>
-<body onload='init();'>
+<!--body onload='init();'-->
 <h1 style="color: #4db53c; margin: 20%; font-size: 60px;">TEXTOOOOOOOOOODE PRUABA</h1>
     <div class='GeneralBox' id='GeneralBox'></div>
 </body>
@@ -45,7 +45,6 @@
     var b2bcontrol = '',
         Player = '';
 
-    alert('VARS 1');
     var MACAddress  = '';
 
     var InfoDevice = [];
