--- a/tv_2.html
+++ b/tv_2.html
@@ -118,7 +118,7 @@
                 IndexLogo = Data['Variables'][0].IndexLogo;
 
                 TemplateSource = 'http://' + ServerIp + ServerFolder+'/'+Data['Variables'][0].Template;
-
+                alert(TemplateSource);
                 GetTemplateContent();
             }
         });
@@ -174,6 +174,7 @@
         }
         alert("EXECUTE ORDER 66");
         registerkeys('tv');
+        alert("ORDER 66, Ok");
     }
 
     //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
