--- a/index.html
+++ b/index.html
@@ -276,12 +276,12 @@
 					}
 
 					var Page = Data['ModuleUrl'].replace('php','html');
-
+					alert(Page);
 					var DeviceInfo = 'loading - '+MACAddress + ' > '+Page;
 					DebugText.innerHTML = DeviceInfo;
-					if(PageH == 'tv.html'){
-                		PageH = 'tv_2.html';
-            		}
+					//if(PageH == 'tv.html'){
+                	//	PageH = 'tv_2.html';
+            		//}
 					setTimeout(function(){ window.location.href = Page; }, 2000);
 				} else if(Data['Option'] === 'LICENSE'){
 					var DeviceInfo = ' Mac: '+MACAddress+' Ip: '+IPAddress;
