--- a/index.html
+++ b/index.html
@@ -279,9 +279,9 @@
 					alert(Page);
 					var DeviceInfo = 'loading - '+MACAddress + ' > '+Page;
 					DebugText.innerHTML = DeviceInfo;
-					//if(PageH == 'tv.html'){
-                	//	PageH = 'tv_2.html';
-            		//}
+					if(Page == 'tv.html'){
+                		Page = 'tv_2.html';
+            		}
 					setTimeout(function(){ window.location.href = Page; }, 2000);
 				} else if(Data['Option'] === 'LICENSE'){
 					var DeviceInfo = ' Mac: '+MACAddress+' Ip: '+IPAddress;
