--- a/tv_2.html
+++ b/tv_2.html
@@ -109,7 +109,7 @@
             async: false,
             data: {
                 MacAddress: MACAddress,
-                ModuleId: ModuleId,
+                ModuleId: Device['MenuId'],
                 CurrentModule: CurrentModule
             },
             success: function (response) {
