--- a/tv_2.html
+++ b/tv_2.html
@@ -109,6 +109,7 @@
             url: 'http://' + ServerIp + ServerFolder+'/Core/Controllers/Module.php',
             async: false,
             data: {
+                Option: 'getModuleTV',
                 ModuleName: 'Tv',
                 ModuleUrl: 'tv.php'
             },
