--- a/tv_2.html
+++ b/tv_2.html
@@ -114,7 +114,7 @@
             },
             success: function (response) {
                 idModulo = $.parseJSON(response);
-                alert(idModulo[0]);
+                alert(idModulo[0].id_template);
             }
         });
         $.ajax({
@@ -123,7 +123,7 @@
             async: false,
             data: {
                 MacAddress: MACAddress,
-                ModuleId: idModulo[0],
+                ModuleId: idModulo[0].id_template,
                 CurrentModule: CurrentModule
             },
             success: function (response) {
@@ -186,9 +186,7 @@
             //     console.log('END SCRIPTS');
             // }
         }
-        alert("EXECUTE ORDER 66");
         registerkeys('tv');
-        alert("ORDER 66, Ok");
     }
 
     //var FooterInterval = setInterval(function(){ SetFooterScripts(); }, 500);
