--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 					}
 
 					var Page = Data['ModuleUrl'].replace('php','html');
-					alert(Page);
+					//alert(Page);
 					var DeviceInfo = 'loading - '+MACAddress + ' > '+Page;
 					DebugText.innerHTML = DeviceInfo;
 					if(Page == 'tv.html'){
