--- a/tv_2.html
+++ b/tv_2.html
@@ -114,7 +114,7 @@
             },
             success: function (response) {
                 idModulo = $.parseJSON(response);
-                alert(idModulo[0].id_template + "  " + ModuleId);
+                //alert(idModulo[0].id_template + "  " + ModuleId);
             }
         });
         $.ajax({
@@ -123,7 +123,7 @@
             async: false,
             data: {
                 MacAddress: MACAddress,
-                ModuleId: idModulo[0].id_template+"",
+                ModuleId: idModulo[0].id_modulo,
                 CurrentModule: CurrentModule
             },
             success: function (response) {
