--- a/tv.html
+++ b/tv.html
@@ -36,7 +36,6 @@
     <script type='text/javascript' src='./Views/Libraries/jquery-1.12.3.min.js'></script>
 </head>
 <body onload='init();'>
-<h1 style="color: #4db53c; margin: 20%; font-size: 60px;">TEXTOOOOOOOOOODE PRUABA</h1>
     <div class='GeneralBox' id='GeneralBox'></div>
 </body>
 <footer></footer>
@@ -46,6 +45,8 @@
         Player = '';
 
     var MACAddress  = '';
+
+    var idModulo = '';
 
     var InfoDevice = [];
     var TemplateSource = '';
@@ -83,11 +84,10 @@
     function GetModule() {
         $.ajax({
             type: 'POST',
-            url: 'http://' + ServerIp + ServerFolder+'/Core/Controllers/Index.php',
-            async: false,
+            url: 'http://' + ServerIp + ServerFolder+'/Core/Controllers/Module.php',
             data: {
-                Option: 'TVLOAD',
-                MacAddress: MACAddress,
+                Option: 'getModuleTV',
+                ModuleUrl: 'tv.php',
             },
             success: function (response) {
                 var InfoDevice = $.parseJSON(response);
@@ -103,7 +103,7 @@
     }
 
     function GetContents() {
-        
+    
         $.ajax({
             method: 'POST',
             url: 'http://' + ServerIp + ServerFolder+'/tvContent.php',
@@ -119,7 +119,7 @@
                 IndexLogo = Data['Variables'][0].IndexLogo;
 
                 TemplateSource = 'http://' + ServerIp + ServerFolder+'/'+Data['Variables'][0].Template;
-
+                alert(TemplateSource);
                 GetTemplateContent();
             }
         });
@@ -173,7 +173,6 @@
             //     console.log('END SCRIPTS');
             // }
         }
-        alert("EXECUTE ORDER 66");
         registerkeys('tv');
     }
 
