--- a/menu.html
+++ b/menu.html
@@ -61,7 +61,6 @@
           i = 0;
 
   var init = function() {
-    alert("INIT MENU");
     if (window.tizen !== undefined) {
       b2bcontrol = window.b2bapis.b2bcontrol;
 
@@ -83,7 +82,6 @@
 
 
   function GetModule() {
-    alert("MODULE INIT");
     $.ajax({
       type: 'POST',
       url: 'http://' + ServerIp + ServerFolder + '/Core/Controllers/Module.php',
@@ -99,14 +97,12 @@
           CurrentModule = 'Menu';
 
           MenuInfo = null;
-          alert("Antes de Get Contents");
           GetContents();
       }
     });
   }
 
   function GetContents() {
-    alert("EN EL INICIO DE GETCONTENTS");
     $.ajax({
       method: 'POST',
       url: 'http://' + ServerIp + ServerFolder +'/menuContent.php',
@@ -122,14 +118,12 @@
         IndexLogo = Data['Variables'][0].IndexLogo;
 
         TemplateSource = 'http://' + ServerIp + ServerFolder +"/" + Data['Variables'][0].Template;
-        alert("ANTES DE TEMPLATE CONTENT");
         GetTemplateContent();
       }
     });
   }
 
   function GetTemplateContent(){
-    alert("EN TEMPLATE CONTENT");
     $.ajax({
       type: 'POST',
       url: TemplateSource,
@@ -138,12 +132,10 @@
         document.getElementById('GeneralBox').innerHTML = '<div id="DebugText"></div> '+response;
       }
     });
-    alert("ANTES DE SET SCRIPTS");
     SetScriptsStyles();
   }
 
   function SetScriptsStyles(){
-    alert("EN SET SCRIPTS");
     for(i = 0; i < Data['ScriptsHeader'].length; i++){
       script = document.createElement('script');
       script.setAttribute('type', 'text/javascript');
@@ -165,7 +157,6 @@
   }
 
   function SetFooterScripts(){
-    alert("EN SET FOOTER SCRIPT");
     for(i = 0; i < Data['ScriptsFooter'].length; i++){
       script = document.createElement('script');
       script.setAttribute('type', 'text/javascript');
@@ -179,7 +170,6 @@
       //     console.log('END SCRIPTS');
       // }
     }
-    alert("FIN DE SET FOOTER SCRIPT");
     registerkeys('tv');
   }
 
@@ -191,13 +181,14 @@
 
   function SetMenuElements(){
     // Contenido multimedia para Menu
-    alert("EN SET MENU ELEMENTS");
     var MainLogo = document.getElementById('MainLogo');
 
     MainLogo.src = IndexLogo;
 
     console.log('------------------->>>>>>>> MAIN LOGO: '+MainLogo);
-    alert("EN EL FINAL DE SET MENU ELEMENTS");
+    alert("Mainlogo     " + MainLogo);
+    alert("MainLogo.src     " + MainLogo.src);
+    alert("Indexlogo     " + IndexLogo);
   }
 </script>
 </html>
