--- a/menu.html
+++ b/menu.html
@@ -186,9 +186,9 @@
     MainLogo.src = IndexLogo;
 
     console.log('------------------->>>>>>>> MAIN LOGO: '+MainLogo);
-    alert("Mainlogo     " + MainLogo);
-    alert("MainLogo.src     " + MainLogo.src);
-    alert("Indexlogo     " + IndexLogo);
+    //alert("Mainlogo     " + MainLogo);
+    //alert("MainLogo.src     " + MainLogo.src);
+    //alert("Indexlogo     " + IndexLogo);
   }
 </script>
 </html>
